add paragráfo teste

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 
 <h1>Está é a pagina sobre curiosidades</h1>
     <p>clique <a href="pasta03/pag03.html">aqui </a>e vc será redirecionado para ela</p>
+    <p>teste</p>
 
 </body>
 </html>
